<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Loop</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="MainTitle">Welcome to Loop</string>
    <string name="placeholder_email">email@utoronto.ca</string>
    <string name="placeholder_pass">password</string>
    <string name="placeholder_confirm_pass">confirm password</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>

</resources>
