<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_blue"
        android:layout_marginTop="150dp" />
    
    <EditText 
        android:inputType="textEmailAddress"
    	android:layout_width="250dp"
  	 	android:layout_height="40dp"
  	 	android:layout_gravity="center"
  	 	android:gravity="center"
  	 	android:hint="@string/placeholder_email"
  	 	android:id="@+id/email_field"/>
    <EditText
        android:inputType="textPassword"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/placeholder_pass"
        android:id="@+id/pass_field"/>
    
    <EditText
        android:inputType="textPassword"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/placeholder_confirm_pass"
        android:id="@+id/confirm_pass_field"/>
    
    <Button 
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:text="@string/signup"
        android:layout_gravity="center" style=""
        android:layout_marginTop="25dp" />
    

</LinearLayout>
