<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#e5e5e5">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo_blue" />
    
   <LinearLayout
    android:layout_width="310dp"
    android:layout_height="150dp"
    android:layout_gravity="center"
    android:orientation="vertical" 
    android:background="#FFFFFF">
    
    <EditText 
        android:inputType="textEmailAddress"
    	android:layout_width="250dp"
  	 	android:layout_height="40dp"
  	 	android:layout_gravity="center"
  	 	android:layout_marginTop="10dp"
  	 	android:gravity="center"
  	 	android:hint="@string/placeholder_email"
  	 	android:textSize="13dp"
  	 	android:id="@+id/email_field"/>
    <EditText
        android:inputType="textPassword"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/placeholder_pass"
        android:textSize="13dp"
        android:id="@+id/pass_field"/>

    
    <Button 
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:background="@drawable/signup_1_90"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:id="@+id/b_login" />
    
	</LinearLayout>
</LinearLayout>
